# firstten

./: .env.example  CHANGELOG.md  Dockerfile  README.md  ci.yml  docker-compose.yml  gen_push.py  push.json  pyproject.toml  qa_dm.json  test.yml.bak
frontend/: app.js  index.html
new/.github/workflows/: test.yml
src/firstten/: main.py
src/firstten/api/: lead.py
src/firstten/core/: config.py  db.py
src/firstten/schemas/: lead.py
src/firstten/services/: lead_service.py
tests/: conftest.py  test_api.py
