[build-system]
requires = ["hatchling"]
build-backend = "hatchling"

[project]
name = "firstten"
version = "0.1.0"
description = ""
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "loguru>=0.7",
]
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/firstten"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
scripts = []

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx",
]
scripts = []

[tool.hatch.envs.test]
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]